@@ -1,3 +1,4 @@
+* Add CSV exports into print toolbar
 * Display unread and total of notes
 * Support badge on icon
 * Use resources method
